--- a/Statistics1.ipynb
+++ b/Statistics1.ipynb
@@ -6,7 +6,7 @@
       "name": "Statistics1.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN9JFxF1JldvEoX/5ruzIKA",
+      "authorship_tag": "ABX9TyMDJ85q7AV3NbkuMpQAwFYJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -273,7 +273,7 @@
       "source": [
         "Using the specific functions we can find out the mean (average) of the list is 30, the median (central value) of the list is 4 and the the number repeated the most in the list ie. the mode is also 4.\n",
         "\n",
-        "Conclusion- We have learned to calculate the mean, median and mode of array using numpy and statistics library in python."
+        "**Conclusion**- We have learned to calculate the mean, median and mode of array using numpy and statistics library in python."
       ],
       "metadata": {
         "id": "4XNbCnxt1BPe"
